Style the html file for the project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LoginPage</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  
+  <div class="left signup-container"></div>
+  <div class="right signup-container"></div>
 </body>
 </html>
