--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div class="left signup-container"></div>
+  <div class="left signup-container">
+    <div class="text-container">
+      <h1>SIGN UP</h1>
+      <h6>Get your <span>free</span> account!</h6>
+    </div>
+    <img src="./src/public/sneaker-2.png" alt="Sneaker Image">
+  </div>
   <div class="right signup-container"></div>
 </body>
 </html>
