--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
     </div>
     <img src="./src/public/sneaker-2.png" alt="Sneaker Image">
   </div>
-  <div class="right signup-container"></div>
+  <div class="right signup-container">
+    <img src="./src/public/logo-2.png" alt="companyname logo">
+    <form class="container" method="post" action="#">
+      <div class="input-container">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username" placeholder="Username">
+      </div>
+
+      <div class="input-container">
+        <label for="email">E-Mail</label>
+        <input type="email" name="email" id="email" placeholder="your@email.com">
+      </div>
+
+      <div class="input-container">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" placeholder="Password">
+      </div>
+
+      <div class="input-container">
+        <label for="confirm-password">Confirm password</label>
+        <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm your password">
+      </div>
+    </form>
+  </div>
 </body>
 </html>
