Style the buttons and make some adjustments

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             <label for="newsletter"><small>Newsletter</small></label>
           </div>
         </div>
+
+        <div class="button-inputs">
+          <input class="btn-primary" type="submit" value="Sign Up">
+          <input class="btn-secondary" type="button" value="Sign In">
+        </div>
+        <small>Your data is encrypted and not passed on to third parties.</small>
       </div>
     </form>
   </div>
