Create the responsiveness

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <img src="./src/public/sneaker-2.png" alt="Sneaker Image">
   </div>
   <div class="right signup-container">
-    <img src="./src/public/logo-2.png" alt="companyname logo">
+    <div class="right-header">
+      <img src="./src/public/logo-2.png" alt="companyname logo">
+      <h3>SIGN UP</h3>
+    </div>
     <form class="container" method="post" action="#">
       <div class="inputs-container">
         <div class="text-inputs">
