--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="button-inputs">
           <input class="btn-primary" type="submit" value="Sign Up">
-          <input class="btn-secondary" type="button" value="Sign In">
+          <a class="btn-secondary" href="signin.html">Sign In</a>
         </div>
         <small>Your data is encrypted and not passed on to third parties.</small>
       </div>
